--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,10 @@
-<div>
   <div>
     <img src="../assets/images/bg__left.svg" alt="" class="blob left">
     <img src="../assets/images/bg__top-right.svg" alt="" class="blob top">
     <img src="../assets/images/bg__btm-right.svg" alt="" class="blob bottom">
   </div>
-  <app-menu></app-menu>
-  <app-cart></app-cart>
-</div>
+  <div class="column">
+    <div class="menu"><app-menu></app-menu></div>
+    <div class="cart"><app-cart></app-cart></div>
+  </div>
+
