--- a/src/app/fooditem/fooditem.component.html
+++ b/src/app/fooditem/fooditem.component.html
@@ -1,1 +1,6 @@
-<p>fooditem works!</p>
+<div class="fooditem" [style.background-color]="color">
+<img class="img" [src]="image" alt="">
+<p class="food">{{name}}</p>
+<p class="price">{{price}}</p>
+<button class="addcart">Add to Cart</button>
+</div>
