--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,6 @@
-<p>menu works!</p>
+<h1>To Go Menu</h1>
+<div class="menu">
+<div *ngFor='let item of food'>
+  <app-fooditem [name]=item.name [price]="item.price | currency" [image]=item.img [color]='colorpicker()'></app-fooditem>
+</div>
+</div>
