--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,4 +3,17 @@ body{
     padding: none;
     margin: 0%;
     background-color: #EFF0F6;
+    display: grid;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@400;700&display=swap');
+
+h1,.price{
+    font-family: 'Poppins', sans-serif; 
+    font-weight: 700; 
+}
+.food{
+    font-family: 'Montserrat', sans-serif; 
 }
