--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,27 @@ h1,.price{
     font-family: 'Montserrat', sans-serif; 
     font-weight: 400;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 0px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 30px;
+    box-shadow: inset 0 0 1px grey;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 30px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+    border-radius: 30px;
+  }
